--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <style>
             body {
                 font-family: Arial, sans-serif;
-                background-color: #1b22f1;
+                background-color: #eeb1e6;
                 margin: 0;
                 padding: 0;
             }
