--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             
             #container {
                 text-align: center;
-                background-color: #48c8f3;
+                background-color: #f0cef3;
                 padding: 20px;
                 border-radius: 10px;
                 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
